# character-stream-rs

./: Cargo.toml  README.md
src/: character_iter.rs  character_stream.rs  error.rs  lib.rs
