[package]
name = "character-stream"
version = "0.10.0"
edition = "2021"
author = "Noah Shanaberger <noah@thenoah.party>"
description = "Helper data structures for reading UTF-8 characters from a stream."
license = "MIT"
homepage = "https://github.com/32Bites/character-stream-rs"
repository = "https://github.com/32Bites/character-stream-rs"
readme = "README.md"
keywords = ["iterator", "unicode", "stream", "reader", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# system-interface = "0.21"
thiserror = "1.0"
anyhow = "1.0"